Fix misalignment of options buttons on followers card

--- a/app/assets/stylesheets/components/_cards.scss
+++ b/app/assets/stylesheets/components/_cards.scss
@@ -166,6 +166,7 @@
   .options {
     display: flex;
     justify-content: space-between;
+    align-items: baseline;
 
 
     button {
